//  uplink, a simple daemon to implement a simple chat protocol
//  Copyright (C) Marco Cilloni <marco.cilloni@yahoo.com> 2016
//
//  This Source Code Form is subject to the terms of the Mozilla Public
//  License, v. 2.0. If a copy of the MPL was not distributed with this
//  file, You can obtain one at http://mozilla.org/MPL/2.0/.
//  Exhibit B is not attached; this software is compatible with the
//  licenses expressed under Section 1.12 of the MPL v2.

syntax = "proto3";

package protodef;

option java_package = "com.github.mcilloni.uplink";
option java_outer_classname = "UplinkProto";

service Uplink {
  rpc Exists (Username) returns (BoolResp);
  rpc LoginExchange (stream LoginReq) returns (stream LoginResp);
  rpc NewUser (NewUserReq) returns (NewUserResp);
  rpc Ping (Empty) returns (BoolResp);
  rpc Resume (SessInfo) returns (BoolResp);
}

message Empty {}

message BoolResp {
  bool success = 1;
}

message NewUserReq {
  string name = 1;
  string pass = 2;
  bytes public_key = 3;
  bytes enc_private_key = 4;
  bytes key_iv = 5;
  bytes key_salt = 6;
}

message NewUserResp {
  SessInfo session_info = 1;
}

message LoginReq {
  oneof login_steps {
    AuthInfo step1 = 1;
    Challenge step2 = 2;
  }
}

message Username {
  string name = 1;
}

message AuthInfo {
  string name = 1;
  string pass = 2;
}

message Challenge {
  bytes token = 1;
}

message LoginResp {
  oneof login_steps {
    LoginAccepted step1 = 1;
    SessInfo step2 = 2;
  }
}

message LoginAccepted {
  UserInfo user_info = 1;
  Challenge challenge = 2;
}

message UserInfo {
  bytes public_key = 1;
  bytes enc_private_key = 2;
  bytes key_iv = 5;
  bytes key_salt = 6;
}

message SessInfo {
  int64 uid = 1;
  string session_id = 2;
}
